@@ -3,8 +3,6 @@ package com.paisiwater.engin;
 import com.alibaba.fastjson.JSONObject;
 import com.paisi.utils.HttpClientUtil;
 import com.paisi.utils.MD5Encode;
-import sun.misc.BASE64Decoder;
-//import sun.misc.BASE64Decoder;
 
 import java.net.URLEncoder;
 import java.security.MessageDigest;
@@ -142,16 +140,16 @@ public class SCMUtil {
             String msg=returnStr.getString("Msg");
 //            System.out.println(msg);
 
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] b = decoder.decodeBuffer(msg);
-            String result = new String(b, "utf-8");
-            System.out.println(result);
-//            final Base64.Decoder decoder = Base64.getDecoder();
-//            System.out.println(new String(decoder.decode(msg), "UTF-8"));
-
-//            byte[] asBytes = Base64.getDecoder().decode(msg);
-//            String result = new String(asBytes, "utf-8");
+//            BASE64Decoder decoder = new BASE64Decoder();
+//            byte[] b = decoder.decodeBuffer(msg);
+//            String result = new String(b, "utf-8");
 //            System.out.println(result);
+            final Base64.Decoder decoder = Base64.getDecoder();
+            System.out.println(new String(decoder.decode(msg), "UTF-8"));
+
+            byte[] asBytes = Base64.getDecoder().decode(msg);
+            String result = new String(asBytes, "utf-8");
+            System.out.println(result);
             return result;
         } catch (Exception e) {
             e.printStackTrace();
